fixes space mono rendering on mobile devices (blockquote)

--- a/assets/scss/common/_fonts.scss
+++ b/assets/scss/common/_fonts.scss
@@ -123,7 +123,7 @@
 @font-face {
   font-family: SpaceMono;
   font-style: italic;
-  font-weight: 500;
+  font-weight: 400;
   font-display: swap;
   src:
     local("Space Mono Italic"),
