--- a/assets/scss/components/_comments.scss
+++ b/assets/scss/components/_comments.scss
@@ -28,6 +28,7 @@ blockquote {
   font-family: $font-family-monospace;
   font-size: $font-size-sm;
   font-style: italic;
+  font-weight: 400;
   border-left: 3px solid darken($baby-pink, 6%);
   padding-left: 1rem;
 }
